--- a/src/main/resources/com/example/hastanesistemi/hastaKayitEkraniView.fxml
+++ b/src/main/resources/com/example/hastanesistemi/hastaKayitEkraniView.fxml
@@ -1,33 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="470.0" prefWidth="506.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hastanesistemi.HastaKayitEkraniController">
+<AnchorPane prefHeight="453.0" prefWidth="492.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hastanesistemi.HastaKayitEkraniController">
    <children>
-      <Label layoutX="69.0" layoutY="70.0" prefHeight="18.0" prefWidth="50.0" text="Hasta TC:" />
-      <Label layoutX="65.0" layoutY="113.0" prefHeight="18.0" prefWidth="58.0" text="Hasta Adı:" />
-      <Label layoutX="167.0" layoutY="24.0" text="HASTA KAYIT EKRANI">
+      <Label layoutX="69.0" layoutY="78.0" prefHeight="18.0" prefWidth="50.0" text="Hasta TC:" />
+      <Label layoutX="71.0" layoutY="126.0" prefHeight="18.0" prefWidth="58.0" text="Hasta Adı:" />
+      <Label layoutX="160.0" layoutY="22.0" text="HASTA KAYIT EKRANI">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="65.0" layoutY="167.0" text="Hasta Soyadı:" />
-      <Label layoutX="64.0" layoutY="212.0" prefHeight="18.0" prefWidth="50.0" text="Telefon:" />
-      <Label layoutX="72.0" layoutY="315.0" text="Adres:" />
-      <TextField fx:id="hastaTCtxt" layoutX="162.0" layoutY="63.0" />
-      <TextField fx:id="hastaAdiTxt" layoutX="162.0" layoutY="110.0" />
-      <TextField fx:id="hastaSoyadiTxt" layoutX="162.0" layoutY="160.0" />
-      <TextField fx:id="telefontxt" layoutX="162.0" layoutY="205.0" />
-      <TextArea fx:id="adresTxt" layoutX="161.0" layoutY="315.0" prefHeight="106.0" prefWidth="150.0" />
-      <Label layoutX="69.0" layoutY="251.0" prefHeight="18.0" prefWidth="50.0" text="Cinsiyet:" />
-      <Button fx:id="kaydetBtn" layoutX="351.0" layoutY="388.0" mnemonicParsing="false" onAction="#onKaydetBtn" prefHeight="34.0" prefWidth="71.0" text="Kaydet" />
-      <ComboBox fx:id="cinsiyetBox" layoutX="161.0" layoutY="248.0" onAction="#onCinsiyetBox" prefWidth="150.0" />
+      <Label layoutX="71.0" layoutY="176.0" text="Hasta Soyadı:" />
+      <Label layoutX="75.0" layoutY="225.0" prefHeight="18.0" prefWidth="50.0" text="Telefon:" />
+      <TextField fx:id="hastaTCtxt" layoutX="178.0" layoutY="75.0" />
+      <TextField fx:id="hastaAdiTxt" layoutX="178.0" layoutY="122.0" />
+      <TextField fx:id="hastaSoyadiTxt" layoutX="178.0" layoutY="172.0" />
+      <TextField fx:id="telefontxt" layoutX="178.0" layoutY="222.0" />
+      <Label layoutX="75.0" layoutY="277.0" prefHeight="18.0" prefWidth="50.0" text="Şifre:" />
+      <Button fx:id="kaydetBtn" layoutX="167.0" layoutY="373.0" mnemonicParsing="false" onAction="#onKaydetBtn" prefHeight="34.0" prefWidth="172.0" text="Kaydet" />
+      <TextField fx:id="sifreTxt" layoutX="178.0" layoutY="273.0" />
    </children>
 </AnchorPane>
