--- a/src/main/resources/com/example/hastanesistemi/randevuAlmaEkraniView.fxml
+++ b/src/main/resources/com/example/hastanesistemi/randevuAlmaEkraniView.fxml
@@ -3,12 +3,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="407.0" prefWidth="604.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hastanesistemi.RandevuAlmaEkraniController">
    <children>
-      <Label layoutX="202.0" layoutY="37.0" text="RANDEVU ALMA EKRANI">
+      <Label layoutX="202.0" layoutY="23.0" text="RANDEVU ALMA EKRANI">
          <font>
             <Font size="18.0" />
          </font>
@@ -38,5 +39,11 @@
       <ComboBox fx:id="tarihCombobox" layoutX="248.0" layoutY="206.0" onMouseClicked="#onTarihComboboxClick" prefWidth="150.0" />
       <ComboBox fx:id="saatCombobox" layoutX="248.0" layoutY="253.0" onMouseClicked="#onSaatComboboxClick" prefWidth="150.0" />
       <Button fx:id="randevuAlBtn" layoutX="420.0" layoutY="331.0" mnemonicParsing="false" onAction="#onRandevuAlBtn" prefHeight="26.0" prefWidth="116.0" text="Randevu Al" />
+      <Label layoutX="104.0" layoutY="71.0" text="Hasta TC:">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="hastaTcTxt" layoutX="249.0" layoutY="68.0" />
    </children>
 </AnchorPane>
