--- a/src/main/resources/com/example/hastanesistemi/hastaGirisEkraniView.fxml
+++ b/src/main/resources/com/example/hastanesistemi/hastaGirisEkraniView.fxml
@@ -5,10 +5,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hastanesistemi.HastaGirisEkraniController">
    <children>
-      <Button fx:id="randevuGoruntuleBtn" layoutX="352.0" layoutY="200.0" mnemonicParsing="false" onAction="#onRandevuGoruntuleBtn" prefHeight="42.0" prefWidth="143.0" text="Randevu Görüntüle" />
+      <Button fx:id="randevuGoruntuleBtn" layoutX="352.0" layoutY="200.0" mnemonicParsing="false" onAction="#onRandevuGoruntuleBtn" prefHeight="42.0" prefWidth="143.0" text="Randevu Sil" />
       <Button fx:id="randevuAlBtn" layoutX="116.0" layoutY="200.0" mnemonicParsing="false" onAction="#onRandevuAlBtn" prefHeight="42.0" prefWidth="110.0" text="Randevu Al" />
       <Label layoutX="188.0" layoutY="68.0" text="HASTA GİRİŞ EKRANI">
          <font>
